infrastructure/istio-gateway/overlays/avisi-ame-poc/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  # annotations:
  #   service.beta.kubernetes.io/port_80_health-probe_protocol: "TCP"
  #   service.beta.kubernetes.io/port_443_health-probe_protocol: "TCP"
  #   cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
